# bitworld

./: .gitignore  README.md  bitworld.nimble  config.nims  flake.nix  install.sh  pyproject.toml
among_them/: README.md  among_them.nim  bench_scan.nim  config.json  global.nim  replay_viewer.nim  replays.nim  server.nim  sim.nim  skeld2.aseprite  spritesheet.aseprite  texts.nim  vanta9.aseprite  vanta9.json  votereader.nim  votescreen.aseprite
asteroid_arena/: asteroid_arena.nim
big_adventure/: big_adventure.nim  global.nim  player.nim  server.nim  sim.nim
boundless_factory/: boundless_factory.nim
brushwalk/: brushwalk.nim
bubble_eats/: bubble_eats.nim
client/: aseprite.nim  client.nim
clients/: global_client.html  global_client.nim  player_client.html  player_client.nim  reward_client.nim  stats.html
common/: int_math.nim  pixelfonts.nim  protocol.nim  reward_protocol.nim  rl_protocol.nim  server.nim  spriteRecognition.ts
data/: player.aseprite  snake.aseprite  swoosh.aseprite  wall.aseprite
docs/: bitreplay_spec.md  bitscreen_protocol.md  bitworld.md  global_protocol_spec.md  player_protocol_spec.md  quick_run.md  reward_protocol_spec.md  reward_spec.md  sprite_protocol.md  tools.md
extras/: __init__.py  install.sh  nottoodumb_setup.py  pyproject.toml
fancy_cookout/: fancy_cookout.nim
free_chat/: free_chat.nim
games_server/: among_them.docker  big_adventure.docker  fancy_cookout.docker  games_server.nim  infinite_factory.docker  italkalot.docker  ivotewell.docker  nottoodumb.docker  planet_wars.docker
global_client/: index.html
global_ui/: global_ui.nim  map.aseprite
ice_brawl/: ice_brawl.nim
infinite_blocks/: infinite_blocks.nim
jsclient/: index.html
jumper/: jumper.nim
(+226 files in other folders)
